# simulink-canards

./: .gitattributes  .gitignore  .gitmodules  README.md  barrowaman.mat  model_params.mat
MyTool/: File.txt
analysis/: testflight_analyzer.m
analysis/actuator/: actuator_response_reef.m
codegen_test/: test_codegen.slx
controller/: linear_model.m  linear_sim.slx
design/: linear_params.m  linear_sim.slx
design-support/test/: test_step.m  (+5 more)
documentation/: appendix-finn.tex  controller.tex  estimator.tex  implementation.tex  introduction.tex  main.tex  model.tex  modeling.tex  numerics.tex  plant.tex  refs-finn.bib  refs-joe.bib  refs-team.bib  results.tex  simulation-results.tex  symbols-finn.tex  techreport.sty
egn_state_estimator/: CMakeLists.txt  package.xml
egn_state_estimator/doc/: README.md  adding_sensors.md  classes.md  concept.md  debugging.md
egn_state_estimator/launch/: kalmanParameters.yaml  simpleDynamicSlip.yaml  stateEstimatorDV.launch
egn_state_estimator/src/: SensorDataManager.cpp  SensorDataManager.h  StateEstimatorMain.cpp  StateEstimatorNode.cpp  StateEstimatorNode.h  StateTypeDefs.h
egn_state_estimator/src/filter/: KalmanFilter.cpp  KalmanFilter.h  State.cpp  State.h
egn_state_estimator/src/measurement/: ImuMeasurementModel.cpp  ImuMeasurementModel.h  MeasurementModel.h  SlamMeasurementModel.cpp  SlamMeasurementModel.h  WheelSpeedMeasurementModel.cpp  WheelSpeedMeasurementModel.h
egn_state_estimator/src/prediction/: ConstantAccelerationModel.h  PredictionModel.h  SimpleDynamicSlip.h
hil/: 00000018.TXT  h.py  hil.slx
monte-carlo/: plant_model_baseline.mat  plot_animation.m  plot_control_stats.m  plot_est_dashboard.m  plot_est_stats.m  plot_est_stats_covariance.m  plot_sweep.m  sim_call.m  sim_call_sweep.m  sim_postprocessor.m  sim_postprocessor_in.m  sim_recent.mat  testwrite.mat
plant-model/: CC_Flight_Simulation.slx  barrowman.mat  configure_plant_model.m
project-jupiter-cc/: Alfa_e_Mach.slx  Axial_Drag.slx  Barrowman_Equations.m  CC_Flight_Simulation.slx  CC_Flight_Simulation.slxc  Environment_Model.slx  Forces_and_Moments.slx  Gravity_and_Propulsion.slx  Normal_Forces_and_Moments.slx  Plant.slx  Roll_Forcing_and_Damping.slx  Sensors.slx  barrowaman.mat  calculate_cnalfa1.m  canards_servo.slx  lift_compoenent.slx  rocket_plant.slx  visualization.slx
sim-6dof/: params_environment.m  params_rocket_constant.m  simulation_6dof.slx  simulation_6dof.slx.r2023a
(+1811 files in other folders)
